# git-bisect

./: CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  module_config.cmake  setup_linux.sh  tests.cmake  toolchain.cmake
.github/workflows/: deploy.yml  my-action.yml  unit-tests.yml
sources/inc/app/: app.hpp
sources/inc/config/: config.hpp
sources/inc/device/: device.hpp
sources/src/app/: app.cpp
sources/src/config/: config.cpp
sources/src/device/: device.cpp
submodules/: Makefile
tests/src/: test.cpp
tests/src/app/: appTEST.cpp
